--- a/NetworkMonitor/build.gradle
+++ b/NetworkMonitor/build.gradle
@@ -34,6 +34,11 @@ dependencies {
     // Material Design
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 
+    // Coroutines
+    def coroutine_version = "1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
